// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccordionBox /> render AccordionBox 1`] = `
<div
  className="mfui-beta-accordion-box"
>
  <Grid
    hAlign="left"
    multiRow={true}
  >
    <GridColumn
      all="12"
      flex={false}
      grow={false}
      orderAll="0"
      orderDesktop="0"
      orderMobile="0"
      orderTablet="0"
      orderWide="0"
      wide="8"
    >
      <Accordion
        isOpened={false}
        onClickAccordion={[MockFunction]}
        title="Test"
      >
        <div>
          test
        </div>
      </Accordion>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<AccordionBox /> render AccordionBox with hCenterAlignWide=true 1`] = `
<div
  className="mfui-beta-accordion-box"
>
  <Grid
    hAlign="center"
    multiRow={true}
  >
    <GridColumn
      all="12"
      flex={false}
      grow={false}
      orderAll="0"
      orderDesktop="0"
      orderMobile="0"
      orderTablet="0"
      orderWide="0"
      wide="8"
    >
      <Accordion
        isOpened={false}
        onClickAccordion={[MockFunction]}
        title="Test"
      >
        <div>
          test
        </div>
      </Accordion>
    </GridColumn>
  </Grid>
</div>
`;
